fixing small alignments

--- a/mobile.css
+++ b/mobile.css
@@ -69,6 +69,7 @@
     }
 
     .part2 .story-card .img .date {
+        padding: 0.5rem;
         left: 0.6rem;
     }
 
@@ -76,7 +77,9 @@
         padding: 1rem;
     }
 
-
+    .text-section {
+        text-align: center;
+    }
 
 
 
@@ -100,7 +103,7 @@
 @media screen and (max-width:448px) {
 
     .part2 .story-card .img {
-        height: 120px;
+        height: 110px;
     }
 
     .part2 .story-card .img .date>p {
